Bug 313304 - Tellico don't get all informations in numeric fields
Summary: Tellico don't get all informations in numeric fields
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.3.6
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-15 14:49 UTC by Nolwenn
Modified: 2013-01-19 06:58 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.3.7
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nolwenn 2013-01-15 14:49:27 UTC
In wine collection, add a new wine and input various text fields and numerical fields (vintage, alcohol, number of bottles). Save the entry and tellico displays all informations.
Add a second wine and fill fields too, but only clic up arrow for numerical fields (it's display the value for the previous entry) and save the entry. Tellico don't save the vintage or the number of bottle.
This behaviour is a little boring when you add wines from the same vintage and/or with the same number of bottles.

Reproducible: Always

Steps to Reproduce:
1. Add a new wine, fill a name and the vintage (2012 for example) and save
You get (in french)
Producteur: firt wine
Appellation:
Variété:
Cru: 2012 (= vintage)

2. Add a second wine, input a name, clic on arrow of vintage field (it's display 2012) and save

You get
.Producteur: second wine
 Appellation:
 Variété:
 Cru:
Comment 1 Robby Stephenson 2013-01-19 06:58:47 UTC
Git commit 74d6ae6150e9d8eaa2a5028a00fd058a32ec6af8 by Robby Stephenson.
Committed on 19/01/2013 at 07:56.
Pushed by rstephenson into branch '2.3'.

Catch the case of number fields getting updated by clicking the arrows

Apparently, when a spinbox is cleared, the internal value is not
changed when the lineedit is cleared. When the little up arrow is
clicked, the internal value is used to set the lineedit text but the
valueChanged signal is not emitted.
FIXED-IN: 2.3.7

M  +4    -0    ChangeLog
M  +4    -0    src/gui/numberfieldwidget.cpp
M  +15   -0    src/gui/spinbox.cpp
M  +3    -1    src/gui/spinbox.h

http://commits.kde.org/tellico/74d6ae6150e9d8eaa2a5028a00fd058a32ec6af8