Catch the case of number fields getting updated by clicking the arrows

Apparently, when a spinbox is cleared, the internal value is not
changed when the lineedit is cleared. When the little up arrow is
clicked, the internal value is used to set the lineedit text but the
valueChanged signal is not emitted.
BUG: 313304
FIXED-IN: 2.3.7